LuaObfuscator/tools/antlr/Lua/LuaParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4.1.9004
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4.1.9004 Lua.g 2011-10-14 15:54:55

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4.1.9004")]
[System.CLSCompliant(false)]
public partial class LuaParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHARSTRING", "COMMENT", "EXP", "EscapeSequence", "FLOAT", "HEX", "HexDigit", "INT", "LINE_COMMENT", "LONGSTRING", "NAME", "NEWLINE", "NORMALSTRING", "OctalEscape", "UnicodeEscape", "WS", "'#'", "'%'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'..'", "'...'", "'/'", "':'", "';'", "'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'['", "']'", "'^'", "'and'", "'break'", "'do'", "'else'", "'elseif'", "'end'", "'false'", "'for'", "'function'", "'if'", "'in'", "'local'", "'nil'", "'not'", "'or'", "'repeat'", "'return'", "'then'", "'true'", "'until'", "'while'", "'{'", "'}'", "'~='"
	};
	public const int EOF=-1;
	public const int CHARSTRING=4;
	public const int COMMENT=5;
	public const int EXP=6;
	public const int EscapeSequence=7;
	public const int FLOAT=8;
	public const int HEX=9;
	public const int HexDigit=10;
	public const int INT=11;
	public const int LINE_COMMENT=12;
	public const int LONGSTRING=13;
	public const int NAME=14;
	public const int NEWLINE=15;
	public const int NORMALSTRING=16;
	public const int OctalEscape=17;
	public const int UnicodeEscape=18;
	public const int WS=19;
	public const int T__20=20;
	public const int T__21=21;
	public const int T__22=22;
	public const int T__23=23;
	public const int T__24=24;
	public const int T__25=25;
	public const int T__26=26;
	public const int T__27=27;
	public const int T__28=28;
	public const int T__29=29;
	public const int T__30=30;
	public const int T__31=31;
	public const int T__32=32;
	public const int T__33=33;
	public const int T__34=34;
	public const int T__35=35;
	public const int T__36=36;
	public const int T__37=37;
	public const int T__38=38;
	public const int T__39=39;
	public const int T__40=40;
	public const int T__41=41;
	public const int T__42=42;
	public const int T__43=43;
	public const int T__44=44;
	public const int T__45=45;
	public const int T__46=46;
	public const int T__47=47;
	public const int T__48=48;
	public const int T__49=49;
	public const int T__50=50;
	public const int T__51=51;
	public const int T__52=52;
	public const int T__53=53;
	public const int T__54=54;
	public const int T__55=55;
	public const int T__56=56;
	public const int T__57=57;
	public const int T__58=58;
	public const int T__59=59;
	public const int T__60=60;
	public const int T__61=61;
	public const int T__62=62;
	public const int T__63=63;
	public const int T__64=64;
	public const int T__65=65;
	public const int T__66=66;

	public LuaParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public LuaParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		OnCreated();
	}

	public override string[] TokenNames { get { return LuaParser.tokenNames; } }
	public override string GrammarFileName { get { return "Lua.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_chunk();
	partial void LeaveRule_chunk();
	// $ANTLR start "chunk"
	// Lua.g:21:1: chunk : ( stat ( ';' )? )* ( laststat ( ';' )? )? ;
	[GrammarRule("chunk")]
	private void chunk()
	{
		EnterRule_chunk();
		EnterRule("chunk", 1);
		TraceIn("chunk", 1);
		try { DebugEnterRule(GrammarFileName, "chunk");
		DebugLocation(21, 41);
		try
		{
			// Lua.g:21:7: ( ( stat ( ';' )? )* ( laststat ( ';' )? )? )
			DebugEnterAlt(1);
			// Lua.g:21:9: ( stat ( ';' )? )* ( laststat ( ';' )? )?
			{
			DebugLocation(21, 9);
			// Lua.g:21:9: ( stat ( ';' )? )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, false);
				int LA2_1 = input.LA(1);

				if ((LA2_1==NAME||LA2_1==22||LA2_1==45||(LA2_1>=50 && LA2_1<=52)||LA2_1==54||LA2_1==58||LA2_1==63))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// Lua.g:21:10: stat ( ';' )?
					{
					DebugLocation(21, 10);
					PushFollow(Follow._stat_in_chunk26);
					stat();
					PopFollow();
					if (state.failed) return;
					DebugLocation(21, 15);
					// Lua.g:21:15: ( ';' )?
					int alt1=2;
					try { DebugEnterSubRule(1);
					try { DebugEnterDecision(1, false);
					int LA1_1 = input.LA(1);

					if ((LA1_1==33))
					{
						alt1 = 1;
					}
					} finally { DebugExitDecision(1); }
					switch (alt1)
					{
					case 1:
						DebugEnterAlt(1);
						// Lua.g:21:16: ';'
						{
						DebugLocation(21, 16);
						Match(input,33,Follow._33_in_chunk29); if (state.failed) return;

						}
						break;

					}
					} finally { DebugExitSubRule(1); }


					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }

			DebugLocation(21, 24);
			// Lua.g:21:24: ( laststat ( ';' )? )?
			int alt4=2;
			try { DebugEnterSubRule(4);
			try { DebugEnterDecision(4, false);
			int LA4_1 = input.LA(1);

			if ((LA4_1==44||LA4_1==59))
			{
				alt4 = 1;
			}
			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// Lua.g:21:25: laststat ( ';' )?
				{
				DebugLocation(21, 25);
				PushFollow(Follow._laststat_in_chunk36);
				laststat();
				PopFollow();
				if (state.failed) return;
				DebugLocation(21, 34);
				// Lua.g:21:34: ( ';' )?
				int alt3=2;
				try { DebugEnterSubRule(3);
				try { DebugEnterDecision(3, false);
				int LA3_1 = input.LA(1);

				if ((LA3_1==33))
				{
					alt3 = 1;
				}
				} finally { DebugExitDecision(3); }
				switch (alt3)
				{
				case 1:
					DebugEnterAlt(1);
					// Lua.g:21:35: ';'
					{
					DebugLocation(21, 35);
					Match(input,33,Follow._33_in_chunk39); if (state.failed) return;

					}
					break;

				}
				} finally { DebugExitSubRule(3); }


				}
				break;

			}
			} finally { DebugExitSubRule(4); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("chunk", 1);
			LeaveRule("chunk", 1);
			LeaveRule_chunk();
		}
		DebugLocation(21, 41);
		} finally { DebugExitRule(GrammarFileName, "chunk"); }
		return;

	}
	// $ANTLR end "chunk"

	partial void EnterRule_block();
	partial void LeaveRule_block();
	// $ANTLR start "block"
	// Lua.g:23:1: block : chunk ;
	[GrammarRule("block")]
	private void block()
	{
		EnterRule_block();
		EnterRule("block", 2);
		TraceIn("block", 2);
		try { DebugEnterRule(GrammarFileName, "block");
		DebugLocation(23, 13);
		try
		{
			// Lua.g:23:7: ( chunk )
			DebugEnterAlt(1);
			// Lua.g:23:9: chunk
			{
			DebugLocation(23, 9);
			PushFollow(Follow._chunk_in_block51);
			chunk();
			PopFollow();
			if (state.failed) return;

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("block", 2);
			LeaveRule("block", 2);
			LeaveRule_block();
		}
		DebugLocation(23, 13);
		} finally { DebugExitRule(GrammarFileName, "block"); }
		return;

	}
	// $ANTLR end "block"

	partial void EnterRule_stat();
	partial void LeaveRule_stat();
	// $ANTLR start "stat"
	// Lua.g:25:1: stat : ( varlist1 '=' explist1 | functioncall | 'do' block 'end' | 'while' exp 'do' block 'end' | 'repeat' block 'until' exp | 'if' exp 'then' block ( 'elseif' exp 'then' block )* ( 'else' block )? 'end' | 'for' NAME '=' exp ',' exp ( ',' exp )? 'do' block 'end' | 'for' namelist 'in' explist1 'do' block 'end' | 'function' funcname funcbody | 'local' 'function' NAME funcbody | 'local' namelist ( '=' explist1 )? );
	[GrammarRule("stat")]
	private void stat()
	{
		EnterRule_stat();
		EnterRule("stat", 3);
		TraceIn("stat", 3);
		try { DebugEnterRule(GrammarFileName, "stat");
		DebugLocation(25, 34);
		try
		{
			// Lua.g:25:6: ( varlist1 '=' explist1 | functioncall | 'do' block 'end' | 'while' exp 'do' block 'end' | 'repeat' block 'until' exp | 'if' exp 'then' block ( 'elseif' exp 'then' block )* ( 'else' block )? 'end' | 'for' NAME '=' exp ',' exp ( ',' exp )? 'do' block 'end' | 'for' namelist 'in' explist1 'do' block 'end' | 'function' funcname funcbody | 'local' 'function' NAME funcbody | 'local' namelist ( '=' explist1 )? )
			int alt9=11;
			try { DebugEnterDecision(9, false);
			switch (input.LA(1))
			{
			case NAME:
				{
				int LA9_2 = input.LA(2);

				if ((EvaluatePredicate(synpred5_Lua_fragment)))
				{
					alt9 = 1;
				}
				else if ((EvaluatePredicate(synpred6_Lua_fragment)))
				{
					alt9 = 2;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return;}
					NoViableAltException nvae = new NoViableAltException("", 9, 1, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case 22:
				{
				int LA9_2 = input.LA(2);

				if ((EvaluatePredicate(synpred5_Lua_fragment)))
				{
					alt9 = 1;
				}
				else if ((EvaluatePredicate(synpred6_Lua_fragment)))
				{
					alt9 = 2;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return;}
					NoViableAltException nvae = new NoViableAltException("", 9, 2, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case 45:
				{
				alt9 = 3;
				}
				break;
			case 63:
				{
				alt9 = 4;
				}
				break;
			case 58:
				{
				alt9 = 5;
				}
				break;
			case 52:
				{
				alt9 = 6;
				}
				break;
			case 50:
				{
				int LA9_2 = input.LA(2);

				if ((EvaluatePredicate(synpred14_Lua_fragment)))
				{
					alt9 = 7;
				}
				else if ((EvaluatePredicate(synpred15_Lua_fragment)))
				{
					alt9 = 8;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return;}
					NoViableAltException nvae = new NoViableAltException("", 9, 7, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case 51:
				{
				alt9 = 9;
				}
				break;
			case 54:
				{
				int LA9_2 = input.LA(2);

				if ((EvaluatePredicate(synpred17_Lua_fragment)))
				{
					alt9 = 10;
				}
				else if ((true))
				{
					alt9 = 11;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return;}
					NoViableAltException nvae = new NoViableAltException("", 9, 9, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			default:
				{
					if (state.backtracking>0) {state.failed=true; return;}
					NoViableAltException nvae = new NoViableAltException("", 9, 0, input, 1);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(9); }
			switch (alt9)
			{
			case 1:
				DebugEnterAlt(1);
				// Lua.g:25:9: varlist1 '=' explist1
				{
				DebugLocation(25, 9);
				PushFollow(Follow._varlist1_in_stat60);
				varlist1();
				PopFollow();
				if (state.failed) return;
				DebugLocation(25, 18);
				Match(input,36,Follow._36_in_stat62); if (state.failed) return;
				DebugLocation(25, 22);
				PushFollow(Follow._explist1_in_stat64);
				explist1();
				PopFollow();
				if (state.failed) return;

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// Lua.g:26:2: functioncall
				{
				DebugLocation(26, 2);
				PushFollow(Follow._functioncall_in_stat70);
				functioncall();
				PopFollow();
				if (state.failed) return;

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// Lua.g:27:2: 'do' block 'end'
				{
				DebugLocation(27, 2);
				Match(input,45,Follow._45_in_stat76); if (state.failed) return;
				DebugLocation(27, 7);
				PushFollow(Follow._block_in_stat78);
				block();
				PopFollow();
				if (state.failed) return;
				DebugLocation(27, 13);
				Match(input,48,Follow._48_in_stat80); if (state.failed) return;

				}
				break;
			case 4:
				DebugEnterAlt(4);
				// Lua.g:28:2: 'while' exp 'do' block 'end'
				{
				DebugLocation(28, 2);
				Match(input,63,Follow._63_in_stat86); if (state.failed) return;
				DebugLocation(28, 10);
				PushFollow(Follow._exp_in_stat88);
				exp();
				PopFollow();
				if (state.failed) return;
				DebugLocation(28, 14);
				Match(input,45,Follow._45_in_stat90); if (state.failed) return;
				DebugLocation(28, 19);
				PushFollow(Follow._block_in_stat92);
				block();
				PopFollow();
				if (state.failed) return;
				DebugLocation(28, 25);
				Match(input,48,Follow._48_in_stat94); if (state.failed) return;

				}
				break;
			case 5:
				DebugEnterAlt(5);
				// Lua.g:29:2: 'repeat' block 'until' exp
				{
				DebugLocation(29, 2);
				Match(input,58,Follow._58_in_stat100); if (state.failed) return;
				DebugLocation(29, 11);
				PushFollow(Follow._block_in_stat102);
				block();
				PopFollow();
				if (state.failed) return;
				DebugLocation(29, 17);
				Match(input,62,Follow._62_in_stat104); if (state.failed) return;
				DebugLocation(29, 25);
				PushFollow(Follow._exp_in_stat106);
				exp();
				PopFollow();
				if (state.failed) return;

				}
				break;
			case 6:
				DebugEnterAlt(6);
				// Lua.g:30:2: 'if' exp 'then' block ( 'elseif' exp 'then' block )* ( 'else' block )? 'end'
				{
				DebugLocation(30, 2);
				Match(input,52,Follow._52_in_stat112); if (state.failed) return;
				DebugLocation(30, 7);
				PushFollow(Follow._exp_in_stat114);
				exp();
				PopFollow();
				if (state.failed) return;
				DebugLocation(30, 11);
				Match(input,60,Follow._60_in_stat116); if (state.failed) return;
				DebugLocation(30, 18);
				PushFollow(Follow._block_in_stat118);
				block();
				PopFollow();
				if (state.failed) return;
				DebugLocation(30, 24);
				// Lua.g:30:24: ( 'elseif' exp 'then' block )*
				try { DebugEnterSubRule(5);
				while (true)
				{
					int alt5=2;
					try { DebugEnterDecision(5, false);
					int LA5_1 = input.LA(1);

					if ((LA5_1==47))
					{
						alt5 = 1;
					}


					} finally { DebugExitDecision(5); }
					switch ( alt5 )
					{
					case 1:
						DebugEnterAlt(1);
						// Lua.g:30:25: 'elseif' exp 'then' block
						{
						DebugLocation(30, 25);
						Match(input,47,Follow._47_in_stat121); if (state.failed) return;
						DebugLocation(30, 34);
						PushFollow(Follow._exp_in_stat123);
						exp();
						PopFollow();
						if (state.failed) return;
						DebugLocation(30, 38);
						Match(input,60,Follow._60_in_stat125); if (state.failed) return;
						DebugLocation(30, 45);
						PushFollow(Follow._block_in_stat127);
						block();
						PopFollow();
						if (state.failed) return;

						}
						break;

					default:
						goto loop5;
					}
				}

				loop5:
					;

				} finally { DebugExitSubRule(5); }

				DebugLocation(30, 53);
				// Lua.g:30:53: ( 'else' block )?
				int alt6=2;
				try { DebugEnterSubRule(6);
				try { DebugEnterDecision(6, false);
				int LA6_1 = input.LA(1);

				if ((LA6_1==46))
				{
					alt6 = 1;
				}
				} finally { DebugExitDecision(6); }
				switch (alt6)
				{
				case 1:
					DebugEnterAlt(1);
					// Lua.g:30:54: 'else' block
					{
					DebugLocation(30, 54);
					Match(input,46,Follow._46_in_stat132); if (state.failed) return;
					DebugLocation(30, 61);
					PushFollow(Follow._block_in_stat134);
					block();
					PopFollow();
					if (state.failed) return;

					}
					break;

				}
				} finally { DebugExitSubRule(6); }

				DebugLocation(30, 69);
				Match(input,48,Follow._48_in_stat138); if (state.failed) return;

				}
				break;
			case 7:
				DebugEnterAlt(7);
				// Lua.g:31:2: 'for' NAME '=' exp ',' exp ( ',' exp )? 'do' block 'end'
				{
				DebugLocation(31, 2);
				Match(input,50,Follow._50_in_stat144); if (state.failed) return;
				DebugLocation(31, 8);
				Match(input,NAME,Follow._NAME_in_stat146); if (state.failed) return;
				DebugLocation(31, 13);
				Match(input,36,Follow._36_in_stat148); if (state.failed) return;
				DebugLocation(31, 17);
				PushFollow(Follow._exp_in_stat150);
				exp();
				PopFollow();
				if (state.failed) return;
				DebugLocation(31, 21);
				Match(input,26,Follow._26_in_stat152); if (state.failed) return;
				DebugLocation(31, 25);
				PushFollow(Follow._exp_in_stat154);
				exp();
				PopFollow();
				if (state.failed) return;
				DebugLocation(31, 29);
				// Lua.g:31:29: ( ',' exp )?
				int alt7=2;
				try { DebugEnterSubRule(7);
				try { DebugEnterDecision(7, false);
				int LA7_1 = input.LA(1);

				if ((LA7_1==26))
				{
					alt7 = 1;
				}
				} finally { DebugExitDecision(7); }
				switch (alt7)
				{
				case 1:
					DebugEnterAlt(1);
					// Lua.g:31:30: ',' exp
					{
					DebugLocation(31, 30);
					Match(input,26,Follow._26_in_stat157); if (state.failed) return;
					DebugLocation(31, 34);
					PushFollow(Follow._exp_in_stat159);
					exp();
					PopFollow();
					if (state.failed) return;

					}
					break;

				}
				} finally { DebugExitSubRule(7); }

				DebugLocation(31, 40);
				Match(input,45,Follow._45_in_stat163); if (state.failed) return;
				DebugLocation(31, 45);
				PushFollow(Follow._block_in_stat165);
				block();
				PopFollow();
				if (state.failed) return;
				DebugLocation(31, 51);
				Match(input,48,Follow._48_in_stat167); if (state.failed) return;

				}
				break;
			case 8:
				DebugEnterAlt(8);
				// Lua.g:32:2: 'for' namelist 'in' explist1 'do' block 'end'
				{
				DebugLocation(32, 2);
				Match(input,50,Follow._50_in_stat173); if (state.failed) return;
				DebugLocation(32, 8);
				PushFollow(Follow._namelist_in_stat175);
				namelist();
				PopFollow();
				if (state.failed) return;
				DebugLocation(32, 17);
				Match(input,53,Follow._53_in_stat177); if (state.failed) return;
				DebugLocation(32, 22);
				PushFollow(Follow._explist1_in_stat179);
				explist1();
				PopFollow();
				if (state.failed) return;
				DebugLocation(32, 31);
				Match(input,45,Follow._45_in_stat181); if (state.failed) return;
				DebugLocation(32, 36);
				PushFollow(Follow._block_in_stat183);
				block();
				PopFollow();
				if (state.failed) return;
				DebugLocation(32, 42);
				Match(input,48,Follow._48_in_stat185); if (state.failed) return;

				}
				break;
			case 9:
				DebugEnterAlt(9);
				// Lua.g:33:2: 'function' funcname funcbody
				{
				DebugLocation(33, 2);
				Match(input,51,Follow._51_in_stat191); if (state.failed) return;
				DebugLocation(33, 13);
				PushFollow(Follow._funcname_in_stat193);
				funcname();
				PopFollow();
				if (state.failed) return;
				DebugLocation(33, 22);
				PushFollow(Follow._funcbody_in_stat195);
				funcbody();
				PopFollow();
				if (state.failed) return;

				}
				break;
			case 10:
				DebugEnterAlt(10);
				// Lua.g:34:2: 'local' 'function' NAME funcbody
				{
				DebugLocation(34, 2);
				Match(input,54,Follow._54_in_stat201); if (state.failed) return;
				DebugLocation(34, 10);
				Match(input,51,Follow._51_in_stat203); if (state.failed) return;
				DebugLocation(34, 21);
				Match(input,NAME,Follow._NAME_in_stat205); if (state.failed) return;
				DebugLocation(34, 26);
				PushFollow(Follow._funcbody_in_stat207);
				funcbody();
				PopFollow();
				if (state.failed) return;

				}
				break;
			case 11:
				DebugEnterAlt(11);
				// Lua.g:35:2: 'local' namelist ( '=' explist1 )?
				{
				DebugLocation(35, 2);
				Match(input,54,Follow._54_in_stat213); if (state.failed) return;
				DebugLocation(35, 10);
				PushFollow(Follow._namelist_in_stat215);
				namelist();
				PopFollow();
				if (state.failed) return;
				DebugLocation(35, 19);
				// Lua.g:35:19: ( '=' explist1 )?
				int alt8=2;
				try { DebugEnterSubRule(8);
				try { DebugEnterDecision(8, false);
				int LA8_1 = input.LA(1);

				if ((LA8_1==36))
				{
					alt8 = 1;
				}
				} finally { DebugExitDecision(8); }
				switch (alt8)
				{
				case 1:
					DebugEnterAlt(1);
					// Lua.g:35:20: '=' explist1
					{
					DebugLocation(35, 20);
					Match(input,36,Follow._36_in_stat218); if (state.failed) return;
					DebugLocation(35, 24);
					PushFollow(Follow._explist1_in_stat220);
					explist1();
					PopFollow();
					if (state.failed) return;

					}
					break;

				}
				} finally { DebugExitSubRule(8); }


				}
				break;

			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("stat", 3);
			LeaveRule("stat", 3);
			LeaveRule_stat();
		}
		DebugLocation(35, 34);
		} finally { DebugExitRule(GrammarFileName, "stat"); }
		return;

	}
	// $ANTLR end "stat"

	partial void EnterRule_laststat();
	partial void LeaveRule_laststat();
	// $ANTLR start "laststat"
	// Lua.g:37:1: laststat : ( 'return' ( explist1 )? | 'break' );
	[GrammarRule("laststat")]
	private void laststat()
	{
		EnterRule_laststat();
		EnterRule("laststat", 4);
		TraceIn("laststat", 4);
		try { DebugEnterRule(GrammarFileName, "laststat");
		DebugLocation(37, 41);
		try
		{
			// Lua.g:37:10: ( 'return' ( explist1 )? | 'break' )
			int alt11=2;
			try { DebugEnterDecision(11, false);
			int LA11_1 = input.LA(1);

			if ((LA11_1==59))
			{
				alt11 = 1;
			}
			else if ((LA11_1==44))
			{
				alt11 = 2;
			}
			else
			{
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae = new NoViableAltException("", 11, 0, input, 1);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(11); }
			switch (alt11)
			{
			case 1:
				DebugEnterAlt(1);
				// Lua.g:37:12: 'return' ( explist1 )?
				{
				DebugLocation(37, 12);
				Match(input,59,Follow._59_in_laststat231); if (state.failed) return;
				DebugLocation(37, 21);
				// Lua.g:37:21: ( explist1 )?
				int alt10=2;
				try { DebugEnterSubRule(10);
				try { DebugEnterDecision(10, false);
				int LA10_1 = input.LA(1);

				if ((LA10_1==CHARSTRING||LA10_1==EXP||(LA10_1>=FLOAT && LA10_1<=HEX)||LA10_1==INT||(LA10_1>=LONGSTRING && LA10_1<=NAME)||LA10_1==NORMALSTRING||LA10_1==20||LA10_1==22||LA10_1==27||LA10_1==30||LA10_1==49||LA10_1==51||(LA10_1>=55 && LA10_1<=56)||LA10_1==61||LA10_1==64))
				{
					alt10 = 1;
				}
				} finally { DebugExitDecision(10); }
				switch (alt10)
				{
				case 1:
					DebugEnterAlt(1);
					// Lua.g:37:22: explist1
					{
					DebugLocation(37, 22);
					PushFollow(Follow._explist1_in_laststat234);
					explist1();
					PopFollow();
					if (state.failed) return;

					}
					break;

				}
				} finally { DebugExitSubRule(10); }


				}
				break;
			case 2:
				DebugEnterAlt(2);
				// Lua.g:37:35: 'break'
				{
				DebugLocation(37, 35);
				Match(input,44,Follow._44_in_laststat240); if (state.failed) return;

				}
				break;

			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("laststat", 4);
			LeaveRule("laststat", 4);
			LeaveRule_laststat();
		}
		DebugLocation(37, 41);
		} finally { DebugExitRule(GrammarFileName, "laststat"); }
		return;

	}
	// $ANTLR end "laststat"

	partial void EnterRule_funcname();
	partial void LeaveRule_funcname();
	// $ANTLR start "funcname"
	// Lua.g:39:1: funcname : NAME ( '.' NAME )* ( ':' NAME )? ;
	[GrammarRule("funcname")]
	private void funcname()
	{
		EnterRule_funcname();
		EnterRule("funcname", 5);
		TraceIn("funcname", 5);
		try { DebugEnterRule(GrammarFileName, "funcname");
		DebugLocation(39, 40);
		try
		{
			// Lua.g:39:10: ( NAME ( '.' NAME )* ( ':' NAME )? )
			DebugEnterAlt(1);
			// Lua.g:39:12: NAME ( '.' NAME )* ( ':' NAME )?
			{
			DebugLocation(39, 12);
			Match(input,NAME,Follow._NAME_in_funcname248); if (state.failed) return;
			DebugLocation(39, 17);
			// Lua.g:39:17: ( '.' NAME )*
			try { DebugEnterSubRule(12);
			while (true)
			{
				int alt12=2;
				try { DebugEnterDecision(12, false);
				int LA12_1 = input.LA(1);

				if ((LA12_1==28))
				{
					alt12 = 1;
				}


				} finally { DebugExitDecision(12); }
				switch ( alt12 )
				{
				case 1:
					DebugEnterAlt(1);
					// Lua.g:39:18: '.' NAME
					{
					DebugLocation(39, 18);
					Match(input,28,Follow._28_in_funcname251); if (state.failed) return;
					DebugLocation(39, 22);
					Match(input,NAME,Follow._NAME_in_funcname253); if (state.failed) return;

					}
					break;

				default:
					goto loop12;
				}
			}

			loop12:
				;

			} finally { DebugExitSubRule(12); }

			DebugLocation(39, 29);
			// Lua.g:39:29: ( ':' NAME )?
			int alt13=2;
			try { DebugEnterSubRule(13);
			try { DebugEnterDecision(13, false);
			int LA13_1 = input.LA(1);

			if ((LA13_1==32))
			{
				alt13 = 1;
			}
			} finally { DebugExitDecision(13); }
			switch (alt13)
			{
			case 1:
				DebugEnterAlt(1);
				// Lua.g:39:30: ':' NAME
				{
				DebugLocation(39, 30);
				Match(input,32,Follow._32_in_funcname258); if (state.failed) return;
				DebugLocation(39, 34);
				Match(input,NAME,Follow._NAME_in_funcname260); if (state.failed) return;

				}
				break;

			}
			} finally { DebugExitSubRule(13); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("funcname", 5);
